@@ -9,10 +9,13 @@ export(rk.XML.about)
 export(rk.XML.browser)
 export(rk.XML.cbox)
 export(rk.XML.col)
+export(rk.XML.connect)
+export(rk.XML.convert)
 export(rk.XML.dropdown)
 export(rk.XML.formula)
 export(rk.XML.frame)
 export(rk.XML.input)
+export(rk.XML.logic)
 export(rk.XML.plugin)
 export(rk.XML.pluginmap)
 export(rk.XML.radio)
