@@ -1,9 +1,10 @@
 ChangeLog for package rkwarddev
 
 ## 0.01-5 (2011-09-23)
-  - added function rk.XML.formula()
+  - added functions rk.XML.formula(), rk.XML.convert(), rk.XML.connect() and rk.XML.logic()
   - added possibility to add custom XML code to the logic section with rk.XML.plugin()
     and rk.plugin.skeleton()
+  - fixed id setting in rk.XML.browser()
 
 ## 0.01-4 (2011-09-22)
   - fixed wrong doc link and one wrong object name in rk.plugin.skeleton()
